# cmd/api/main.go
@@ -1,6 +1,10 @@
 // @title           task-manager API
 // @version         1.0
 // @description     API documentation for CheapStores Service
+// @BasePath /api/v1
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
 package main
 
 import (
