# docs/swagger/swagger.json
@@ -6,7 +6,118 @@
         "contact": {},
         "version": "1.0"
     },
+    "basePath": "/api/v1",
     "paths": {
+        "/auth/login": {
+            "post": {
+                "description": "Login user with email and password",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Login User",
+                "parameters": [
+                    {
+                        "description": "User Login Request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/internal_server.UserLoginRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/internal_server.UserLoginResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/internal_server.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/internal_server.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/internal_server.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/register": {
+            "post": {
+                "description": "Register a new user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Register User",
+                "parameters": [
+                    {
+                        "description": "Create User Request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/internal_server.CreateUserRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/internal_server.Message"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request due to invalid query params",
+                        "schema": {
+                            "$ref": "#/definitions/internal_server.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized access",
+                        "schema": {
+                            "$ref": "#/definitions/internal_server.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden: Admins only",
+                        "schema": {
+                            "$ref": "#/definitions/internal_server.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/internal_server.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/renew": {
             "post": {
                 "description": "Generates a new access token using a valid refresh token",
@@ -67,6 +178,11 @@
         },
         "/task": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get a list of all tasks with pagination. Supports filtering by passing `user_id` as a query parameter.",
                 "consumes": [
                     "application/json"
@@ -119,6 +235,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create a new task",
                 "consumes": [
                     "application/json"
@@ -165,6 +286,11 @@
         },
         "/task/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get task by ID",
                 "consumes": [
                     "application/json"
@@ -176,6 +302,15 @@
                     "tasks"
                 ],
                 "summary": "Get Task",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID (UUID format)",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -202,8 +337,15 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/task/{id}/status": {
             "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update the status of an existing task",
                 "consumes": [
                     "application/json"
@@ -216,6 +358,13 @@
                 ],
                 "summary": "Update Task Status",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID (UUID format)",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "description": "Update Task Request",
                         "name": "request",
@@ -250,6 +399,11 @@
         },
         "/user": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get a list of users",
                 "consumes": [
                     "application/json"
@@ -263,13 +417,16 @@
                 "summary": "Get Users",
                 "parameters": [
                     {
-                        "description": "User Request",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/internal_server.UsersRequest"
-                        }
+                        "type": "integer",
+                        "description": "Number of users per page",
+                        "name": "page_size",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page number",
+                        "name": "page_id",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -297,106 +454,13 @@
                 }
             }
         },
-        "/user/login": {
-            "post": {
-                "description": "Login user with email and password",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "auth"
-                ],
-                "summary": "Login User",
-                "parameters": [
-                    {
-                        "description": "User Login Request",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/internal_server.UserLoginRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/internal_server.UserLoginResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/internal_server.ErrorResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/internal_server.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/internal_server.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/user/register": {
-            "post": {
-                "description": "Register a new user",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "auth"
-                ],
-                "summary": "Register User",
-                "parameters": [
-                    {
-                        "description": "Create User Request",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/internal_server.CreateUserRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/internal_server.Message"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/internal_server.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/internal_server.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/user/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get user by ID",
                 "consumes": [
                     "application/json"
@@ -408,6 +472,15 @@
                     "users"
                 ],
                 "summary": "Get User",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID (UUID format)",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -436,6 +509,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -446,6 +524,15 @@
                     "users"
                 ],
                 "summary": "Delete User",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID (UUID format)",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -476,6 +563,11 @@
         },
         "/user/{id}/role": {
             "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -487,6 +579,13 @@
                 ],
                 "summary": "Update User Role",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID (UUID format)",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "description": "New Role",
                         "name": "role",
@@ -530,9 +629,19 @@
         "internal_server.CreateTaskRequest": {
             "type": "object",
             "required": [
-                "title"
+                "description",
+                "due_date",
+                "payload",
+                "priority",
+                "title",
+                "type",
+                "user_id"
             ],
             "properties": {
+                "description": {
+                    "type": "string",
+                    "example": "Image Processing"
+                },
                 "due_date": {
                     "type": "string",
                     "example": "2025-03-30T12:00:00Z"
@@ -541,9 +650,21 @@
                     "type": "string",
                     "example": "Example payload"
                 },
+                "priority": {
+                    "type": "string",
+                    "example": "high"
+                },
                 "title": {
                     "type": "string",
-                    "example": "Complete project"
+                    "example": "Image Processing"
+                },
+                "type": {
+                    "type": "string",
+                    "example": "Image Processing"
+                },
+                "user_id": {
+                    "type": "string",
+                    "example": "123e4567-e89b-12d3-a456-426614174000"
                 }
             }
         },
@@ -552,7 +673,8 @@
             "required": [
                 "email",
                 "name",
-                "password"
+                "password",
+                "role"
             ],
             "properties": {
                 "email": {
@@ -566,7 +688,16 @@
                 "password": {
                     "type": "string",
                     "minLength": 6,
-                    "example": "password123"
+                    "example": "password123{#Pbb"
+                },
+                "role": {
+                    "type": "string",
+                    "enum": [
+                        "ADMIN",
+                        "STANDARD",
+                        "WORKER"
+                    ],
+                    "example": "ADMIN"
                 }
             }
         },
@@ -588,7 +719,8 @@
             "type": "object",
             "properties": {
                 "message": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "success"
                 }
             }
         },
@@ -629,7 +761,8 @@
                 },
                 "password": {
                     "type": "string",
-                    "example": "password123"
+                    "minLength": 6,
+                    "example": "password123{#Pbb"
                 }
             }
         },
@@ -690,25 +823,6 @@
                 "updated_at": {
                     "type": "string",
                     "example": "2025-01-02T12:00:00Z"
-                }
-            }
-        },
-        "internal_server.UsersRequest": {
-            "type": "object",
-            "required": [
-                "pageID",
-                "pageSize"
-            ],
-            "properties": {
-                "pageID": {
-                    "type": "integer",
-                    "minimum": 1,
-                    "example": 1
-                },
-                "pageSize": {
-                    "type": "integer",
-                    "minimum": 1,
-                    "example": 10
                 }
             }
         },
@@ -823,6 +937,13 @@
                 "TaskStatusINPROGRESS",
                 "TaskStatusFAILED"
             ]
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
